// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimePicker /> 12h matches the snapshot 1`] = `
<withStyles(TimePicker)
  mode="12h"
  value={2017-10-15T13:37:00.000Z}
>
  <TimePicker
    classes={
      Object {
        "ampm": "TimePicker-ampm-5",
        "body": "TimePicker-body-7",
        "header": "TimePicker-header-2",
        "placeholder": "TimePicker-placeholder-4",
        "root": "TimePicker-root-1",
        "select": "TimePicker-select-6",
        "time": "TimePicker-time-3",
      }
    }
    mode="12h"
    value={2017-10-15T13:37:00.000Z}
  >
    <div
      className="TimePicker-root-1"
    >
      <div
        className="TimePicker-header-2"
      >
        <div
          className="TimePicker-placeholder-4"
        />
        <div>
          <span
            className="TimePicker-time-3 TimePicker-select-6"
            onClick={[Function]}
          >
            03
          </span>
          :
          <span
            className="TimePicker-time-3"
            onClick={[Function]}
          >
            37
          </span>
        </div>
        <div
          className="TimePicker-ampm-5"
        >
          <span
            className="TimePicker-time-3 TimePicker-select-6"
            onClick={[Function]}
          >
            PM
          </span>
          <span
            className="TimePicker-time-3"
            onClick={[Function]}
          >
            AM
          </span>
        </div>
      </div>
      <div
        className="TimePicker-body-7"
      >
        <withStyles(Clock)
          mode="12h"
          onChange={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          value={3}
        >
          <Clock
            classes={
              Object {
                ".Clock-number-10.selected": "Clock-number-10.selected",
                "animatedPointer": "Clock-animatedPointer-13",
                "circle": "Clock-circle-9",
                "innerDot": "Clock-innerDot-15",
                "number": "Clock-number-10",
                "outerDot": "Clock-outerDot-16",
                "outerDotOdd": "Clock-outerDotOdd-17",
                "pointer": "Clock-pointer-12",
                "root": "Clock-root-8",
                "smallNumber": "Clock-smallNumber-11",
                "smallPointer": "Clock-smallPointer-14",
              }
            }
            mode="12h"
            onChange={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            value={3}
          >
            <div
              className="Clock-root-8"
              onChange={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
            >
              <div
                className="Clock-circle-9"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="Clock-pointer-12 Clock-animatedPointer-13"
                  style={
                    Object {
                      "transform": "rotate(0deg)",
                    }
                  }
                >
                  <div
                    className="Clock-innerDot-15"
                  />
                  <div
                    className="Clock-outerDot-16"
                  />
                </div>
                <span
                  className="Clock-number-10"
                  key="1"
                  style={
                    Object {
                      "transform": "translate(54.000000000000014px, -93.53074360871936px)",
                    }
                  }
                >
                  1
                </span>
                <span
                  className="Clock-number-10"
                  key="2"
                  style={
                    Object {
                      "transform": "translate(93.53074360871938px, -53.99999999999999px)",
                    }
                  }
                >
                  2
                </span>
                <span
                  className="Clock-number-10 selected"
                  key="3"
                  style={
                    Object {
                      "transform": "translate(108px, 0px)",
                    }
                  }
                >
                  3
                </span>
                <span
                  className="Clock-number-10"
                  key="4"
                  style={
                    Object {
                      "transform": "translate(93.53074360871938px, 53.99999999999999px)",
                    }
                  }
                >
                  4
                </span>
                <span
                  className="Clock-number-10"
                  key="5"
                  style={
                    Object {
                      "transform": "translate(54.000000000000014px, 93.53074360871936px)",
                    }
                  }
                >
                  5
                </span>
                <span
                  className="Clock-number-10"
                  key="6"
                  style={
                    Object {
                      "transform": "translate(6.6130927153957075e-15px, 108px)",
                    }
                  }
                >
                  6
                </span>
                <span
                  className="Clock-number-10"
                  key="7"
                  style={
                    Object {
                      "transform": "translate(-53.99999999999998px, 93.53074360871938px)",
                    }
                  }
                >
                  7
                </span>
                <span
                  className="Clock-number-10"
                  key="8"
                  style={
                    Object {
                      "transform": "translate(-93.53074360871938px, 53.99999999999999px)",
                    }
                  }
                >
                  8
                </span>
                <span
                  className="Clock-number-10"
                  key="9"
                  style={
                    Object {
                      "transform": "translate(-108px, 1.3226185430791415e-14px)",
                    }
                  }
                >
                  9
                </span>
                <span
                  className="Clock-number-10"
                  key="10"
                  style={
                    Object {
                      "transform": "translate(-93.53074360871939px, -53.99999999999997px)",
                    }
                  }
                >
                  10
                </span>
                <span
                  className="Clock-number-10"
                  key="11"
                  style={
                    Object {
                      "transform": "translate(-54.00000000000005px, -93.53074360871936px)",
                    }
                  }
                >
                  11
                </span>
                <span
                  className="Clock-number-10"
                  key="12"
                  style={
                    Object {
                      "transform": "translate(-1.983927814618712e-14px, -108px)",
                    }
                  }
                >
                  12
                </span>
              </div>
            </div>
          </Clock>
        </withStyles(Clock)>
      </div>
    </div>
  </TimePicker>
</withStyles(TimePicker)>
`;

exports[`<TimePicker /> 24h matches the snapshot 1`] = `
<withStyles(TimePicker)
  mode="24h"
  value={2017-10-15T13:37:00.000Z}
>
  <TimePicker
    classes={
      Object {
        "ampm": "TimePicker-ampm-5",
        "body": "TimePicker-body-7",
        "header": "TimePicker-header-2",
        "placeholder": "TimePicker-placeholder-4",
        "root": "TimePicker-root-1",
        "select": "TimePicker-select-6",
        "time": "TimePicker-time-3",
      }
    }
    mode="24h"
    value={2017-10-15T13:37:00.000Z}
  >
    <div
      className="TimePicker-root-1"
    >
      <div
        className="TimePicker-header-2"
      >
        <div
          className="TimePicker-placeholder-4"
        />
        <div>
          <span
            className="TimePicker-time-3 TimePicker-select-6"
            onClick={[Function]}
          >
            15
          </span>
          :
          <span
            className="TimePicker-time-3"
            onClick={[Function]}
          >
            37
          </span>
        </div>
        <div
          className="TimePicker-placeholder-4"
        />
      </div>
      <div
        className="TimePicker-body-7"
      >
        <withStyles(Clock)
          mode="24h"
          onChange={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          value={15}
        >
          <Clock
            classes={
              Object {
                ".Clock-number-10.selected": "Clock-number-10.selected",
                "animatedPointer": "Clock-animatedPointer-13",
                "circle": "Clock-circle-9",
                "innerDot": "Clock-innerDot-15",
                "number": "Clock-number-10",
                "outerDot": "Clock-outerDot-16",
                "outerDotOdd": "Clock-outerDotOdd-17",
                "pointer": "Clock-pointer-12",
                "root": "Clock-root-8",
                "smallNumber": "Clock-smallNumber-11",
                "smallPointer": "Clock-smallPointer-14",
              }
            }
            mode="24h"
            onChange={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            value={15}
          >
            <div
              className="Clock-root-8"
              onChange={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
            >
              <div
                className="Clock-circle-9"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="Clock-pointer-12 Clock-smallPointer-14 Clock-animatedPointer-13"
                  style={
                    Object {
                      "transform": "rotate(0deg)",
                    }
                  }
                >
                  <div
                    className="Clock-innerDot-15"
                  />
                  <div
                    className="Clock-outerDot-16"
                  />
                </div>
                <span
                  className="Clock-number-10"
                  key="1"
                  style={
                    Object {
                      "transform": "translate(54.000000000000014px, -93.53074360871936px)",
                    }
                  }
                >
                  1
                </span>
                <span
                  className="Clock-number-10"
                  key="2"
                  style={
                    Object {
                      "transform": "translate(93.53074360871938px, -53.99999999999999px)",
                    }
                  }
                >
                  2
                </span>
                <span
                  className="Clock-number-10"
                  key="3"
                  style={
                    Object {
                      "transform": "translate(108px, 0px)",
                    }
                  }
                >
                  3
                </span>
                <span
                  className="Clock-number-10"
                  key="4"
                  style={
                    Object {
                      "transform": "translate(93.53074360871938px, 53.99999999999999px)",
                    }
                  }
                >
                  4
                </span>
                <span
                  className="Clock-number-10"
                  key="5"
                  style={
                    Object {
                      "transform": "translate(54.000000000000014px, 93.53074360871936px)",
                    }
                  }
                >
                  5
                </span>
                <span
                  className="Clock-number-10"
                  key="6"
                  style={
                    Object {
                      "transform": "translate(6.6130927153957075e-15px, 108px)",
                    }
                  }
                >
                  6
                </span>
                <span
                  className="Clock-number-10"
                  key="7"
                  style={
                    Object {
                      "transform": "translate(-53.99999999999998px, 93.53074360871938px)",
                    }
                  }
                >
                  7
                </span>
                <span
                  className="Clock-number-10"
                  key="8"
                  style={
                    Object {
                      "transform": "translate(-93.53074360871938px, 53.99999999999999px)",
                    }
                  }
                >
                  8
                </span>
                <span
                  className="Clock-number-10"
                  key="9"
                  style={
                    Object {
                      "transform": "translate(-108px, 1.3226185430791415e-14px)",
                    }
                  }
                >
                  9
                </span>
                <span
                  className="Clock-number-10"
                  key="10"
                  style={
                    Object {
                      "transform": "translate(-93.53074360871939px, -53.99999999999997px)",
                    }
                  }
                >
                  10
                </span>
                <span
                  className="Clock-number-10"
                  key="11"
                  style={
                    Object {
                      "transform": "translate(-54.00000000000005px, -93.53074360871936px)",
                    }
                  }
                >
                  11
                </span>
                <span
                  className="Clock-number-10"
                  key="12"
                  style={
                    Object {
                      "transform": "translate(-1.983927814618712e-14px, -108px)",
                    }
                  }
                >
                  12
                </span>
                <span
                  className="Clock-number-10 Clock-smallNumber-11"
                  key="13"
                  style={
                    Object {
                      "transform": "translate(38.00000000000001px, -65.81793068761733px)",
                    }
                  }
                >
                  13
                </span>
                <span
                  className="Clock-number-10 Clock-smallNumber-11"
                  key="14"
                  style={
                    Object {
                      "transform": "translate(65.81793068761735px, -37.99999999999999px)",
                    }
                  }
                >
                  14
                </span>
                <span
                  className="Clock-number-10 Clock-smallNumber-11 selected"
                  key="15"
                  style={
                    Object {
                      "transform": "translate(76px, 0px)",
                    }
                  }
                >
                  15
                </span>
                <span
                  className="Clock-number-10 Clock-smallNumber-11"
                  key="16"
                  style={
                    Object {
                      "transform": "translate(65.81793068761735px, 37.99999999999999px)",
                    }
                  }
                >
                  16
                </span>
                <span
                  className="Clock-number-10 Clock-smallNumber-11"
                  key="17"
                  style={
                    Object {
                      "transform": "translate(38.00000000000001px, 65.81793068761733px)",
                    }
                  }
                >
                  17
                </span>
                <span
                  className="Clock-number-10 Clock-smallNumber-11"
                  key="18"
                  style={
                    Object {
                      "transform": "translate(4.653657836759942e-15px, 76px)",
                    }
                  }
                >
                  18
                </span>
                <span
                  className="Clock-number-10 Clock-smallNumber-11"
                  key="19"
                  style={
                    Object {
                      "transform": "translate(-37.999999999999986px, 65.81793068761735px)",
                    }
                  }
                >
                  19
                </span>
                <span
                  className="Clock-number-10 Clock-smallNumber-11"
                  key="20"
                  style={
                    Object {
                      "transform": "translate(-65.81793068761735px, 37.99999999999999px)",
                    }
                  }
                >
                  20
                </span>
                <span
                  className="Clock-number-10 Clock-smallNumber-11"
                  key="21"
                  style={
                    Object {
                      "transform": "translate(-76px, 9.307315673519884e-15px)",
                    }
                  }
                >
                  21
                </span>
                <span
                  className="Clock-number-10 Clock-smallNumber-11"
                  key="22"
                  style={
                    Object {
                      "transform": "translate(-65.81793068761735px, -37.99999999999998px)",
                    }
                  }
                >
                  22
                </span>
                <span
                  className="Clock-number-10 Clock-smallNumber-11"
                  key="23"
                  style={
                    Object {
                      "transform": "translate(-38.000000000000036px, -65.81793068761732px)",
                    }
                  }
                >
                  23
                </span>
                <span
                  className="Clock-number-10 Clock-smallNumber-11"
                  key="24"
                  style={
                    Object {
                      "transform": "translate(-1.3960973510279826e-14px, -76px)",
                    }
                  }
                >
                  00
                </span>
              </div>
            </div>
          </Clock>
        </withStyles(Clock)>
      </div>
    </div>
  </TimePicker>
</withStyles(TimePicker)>
`;
